--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -16,7 +19,7 @@
     <header>
 
         <section class="container">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
                 <div class="container">
                     <a class="navbar-brand" href="#"><img src="images/logo.png" alt=""
                             class="d-inline-block align-text-top"></a>
@@ -31,13 +34,13 @@
                                 <a class="nav-link active" aria-current="page" href="#">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Shoes</a>
+                                <a class="nav-link" href="#shoes">Shoes</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Backpack</a>
+                                <a class="nav-link" href="#backpack">Backpack</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Subscribe</a>
+                                <a class="nav-link" href="#subscribe">Subscribe</a>
                             </li>
                         </ul>
                     </div>
@@ -49,7 +52,7 @@
         <!-- Image Carousel -->
         <div class="container pt-5">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner border-0 rounded p-5" style="background-color: #FCEAE8" ;>
+                <div class="carousel-inner border-0 rounded p-5 bg-cover">
                     <div class=" carousel-item active">
                         <div class="row d-flex align-items-center">
                             <div class="col-lg-7">
@@ -59,7 +62,7 @@
                                     front of funky world.
                                 </p>
                                 <h1>$420</h1>
-                                <button class="btn btn-warning">Buy Now</button>
+                                <button class="btn panda-btn">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
@@ -76,7 +79,7 @@
                                     front of funky world.
                                 </p>
                                 <h1>$1480</h1>
-                                <button class="btn btn-warning">Buy Now</button>
+                                <button class="btn panda-btn">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
@@ -92,7 +95,7 @@
                                     front of funky world.
                                 </p>
                                 <h1>$800</h1>
-                                <button class="btn btn-warning">Buy Now</button>
+                                <button class="btn panda-btn">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -117,33 +120,33 @@
     <main>
 
         <!-- Categories -->
-        <section class="container my-5">
+        <section class="container my-5 categories">
             <div class="row g-4 align-items-center">
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="p-3 border-0 rounded-3 bg-warning d-flex align-items-center justify-content-between">
+                    <div class="p-3 border-0 rounded-3 bg-watch d-flex align-items-center justify-content-between">
                         <h1 class="text-white">Watch</h1>
-                        <img src="images/categories/watch.png" alt="" height="100px">
+                        <img src="images/categories/watch.png" alt="">
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="p-3 border-0 rounded-3 bg-success d-flex align-items-center justify-content-between">
+                    <div class="p-3 border-0 rounded-3 bg-bag d-flex align-items-center justify-content-between">
                         <h1 class="text-white">Bag</h1>
-                        <img src="images/categories/bag.png" alt="" height="100px">
+                        <img src="images/categories/bag.png" alt="">
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="p-3 border-0 rounded-3 bg-primary d-flex align-items-center justify-content-between">
+                    <div class="p-3 border-0 rounded-3 bg-shoes d-flex align-items-center justify-content-between">
                         <h1 class="text-white">Shoes</h1>
-                        <img src="images/categories/shoes.png" alt="" height="100px">
+                        <img src="images/categories/shoes.png" alt="">
                     </div>
                 </div>
             </div>
         </section>
 
         <!-- Shoes Section -->
-        <section class="container mt-5">
+        <section class="container my-5" id="shoes">
             <h2>Shoes</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -155,7 +158,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn panda-btn">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -168,7 +171,7 @@
                                 content.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn panda-btn">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -181,7 +184,7 @@
                                 additional content. </p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn panda-btn">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -190,7 +193,7 @@
 
 
         <!-- Backpack Section -->
-        <section class="container mt-5">
+        <section class="container my-5" id="backpack">
             <h2>Backpacks</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -202,7 +205,7 @@
                                 additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn panda-btn">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -215,7 +218,7 @@
                                 content.</p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn panda-btn">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -228,16 +231,29 @@
                                 additional content. </p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn panda-btn">Buy Now</button>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+
+        <!-- Subscribe Section -->
+        <section class="container d-flex justify-content-center align-items-center border rounded-3 bg-cover"
+            style="height: 300px;" id="subscribe">
+            <div>
+                <h1>LETS STAY IN TOUCH</h1>
+                <p>Get updates on sales, specials and more</p>
+                <input class="form-control" type="text" placeholder="Your Email">
+                <br>
+                <button class="btn panda-btn">Submit</button>
+            </div>
+        </section>
+
     </main>
 
-    <footer>
-
+    <footer class="mt-5 text-center">
+        <p><small> @2025. Panda Commerce. All Rights Reserved. </small></p>
     </footer>
     <!-- Bootstrap Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
